# stonks

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  stock-streaming.sln
StockClientTui/: Program.cs  StockClientTui.csproj
StockServer/: Program.cs  StockServer.csproj
StockServer/Properties/: launchSettings.json
StockServer/Protos/: stocks.proto
StockServer/Services/: StockUpdatesService.cs
src/: server.rs
